# github-copilot-demo

./: .gitignore  AGENTS.md  BACKLOG.md  Makefile  README.md  docker-compose.yml
.github/agents/: doc-writer.agent.md  feature-builder.agent.md  implementer.agent.md  integrator.agent.md  refactor-lead.agent.md  researcher.agent.md  test-lead.agent.md
.github/hooks/: audit_implementer.py  format.json  format_edited.py  gatekeeper.json  gatekeeper.py  orient.json  orient.py  writezone.py
.github/instructions/: auth.instructions.md  backend.instructions.md  database.instructions.md  docker.instructions.md  e2e.instructions.md  frontend-tests.instructions.md  frontend.instructions.md  python-tests.instructions.md
agent-runs/: README.md
auth/: Dockerfile  pyproject.toml
auth/app/: config.py  db.py  main.py  models.py  schemas.py  security.py
auth/app/routers/: auth.py
auth/tests/: conftest.py
auth/tests/integration/: test_auth_routes.py
auth/tests/unit/: test_security.py
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  schemas.py  security.py  seed.py
backend/tests/: conftest.py
docs/: agentic-workflows.md  architecture.md  auth.md  backend.md  database.md  docker.md  domain.md  e2e.md  frontend-testing.md  frontend.md  python-testing.md
e2e/: package.json  playwright.config.ts
e2e/fixtures/: api.ts
e2e/specs/: auth.spec.ts  leaderboard.spec.ts  submit-score.spec.ts  unauthenticated.spec.ts
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  (+1 more)
scripts/: seed_demo_data.py
(+40 files in other folders)
